--- a/templates/feedback/index.html
+++ b/templates/feedback/index.html
@@ -92,15 +92,13 @@
                 <h3 class="text-lg font-semibold text-gray-900 light:text-white">
                   Write text testimonial to
                 </h3>
-                <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center light:hover:bg-gray-600 light:hover:text-white" data-modal-toggle="crud-modal" onclick="TextToggle()">
-                    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
-                    </svg>
-                    <span class="sr-only">Close modal</span>
-                </button>
+                
             </div>
             <!-- Modal body -->
-            <form class="p-4 md:p-5">
+            <form class="p-4 md:p-5" action="{% url 'create_testimonial' %}" method="post" enctype="multipart/form-data">
+              {% csrf_token %}
+              {{form.as_p}}
+              <input type='hidden' name='space'  value="{{data.id}}">
               <h3 class="text-lg leading-6 font-semibold text-gray-700 uppercase mb-2">Questions</h3>
               <div class="w-10 mb-2 border-b-4" style="border-color: rgb(93, 93, 255);"></div>
               <ul class="mt-2 max-w-xl text-base list-disc pl-4 text-gray-500">
@@ -112,11 +110,11 @@
               </ul>
                 <div class="grid gap-4 mb-4 grid-cols-2 pt-2">
                     <div class="col-span-2">
-                        <textarea type="text" rows="4" name="name" id="name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 light:bg-gray-600 light:border-gray-500 light:placeholder-gray-400 light:text-white light:focus:ring-primary-500 light:focus:border-primary-500"  required=""></textarea>
+                        <textarea type="text" rows="4" name="text" id="text" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 light:bg-gray-600 light:border-gray-500 light:placeholder-gray-400 light:text-white light:focus:ring-primary-500 light:focus:border-primary-500"  required="" value="{{text}}" >{{text}}</textarea>
                     </div>
                     <div class="col-span-2 ">
                           <label for="multiple_files" class="block mb-2 text-sm font-medium text-gray-900 light:text-white">Attach Image(s)</label>
-                          <input type="file" accept="image/png,image/jpeg,image/jpg,image/gif,image/webp" name="files" id="multiple_files" class="hidden" multiple>
+                          <input type="file" accept="image/png,image/jpeg,image/jpg,image/gif,image/webp" name="additional_images" id="multiple_files" class="hidden" multiple>
                           <label for="multiple_files" class="py-2 px-3 border border-gray-300 rounded-md text-sm leading-4 font-medium text-gray-600 hover:text-gray-800 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-50 active:text-gray-800 transition duration-150 ease-in-out cursor-pointer">
                               Choose file
                           </label>
@@ -140,8 +138,8 @@
                       </div>
                       
                       <div class="ml-5 rounded-md">
-                          <input type="file" accept="image/png,image/jpeg,image/jpg,image/gif,image/webp" name="newAvatarURL" id="newAvatarURL" class="hidden" />
-                          <label for="newAvatarURL" class="py-2 px-3 border border-gray-300 rounded-md text-sm leading-4 font-medium text-gray-600 hover:text-gray-800 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-50 active:text-gray-800 transition duration-150 ease-in-out cursor-pointer">
+                          <input type="file" accept="image/png,image/jpeg,image/jpg,image/gif,image/webp" name="image" id="image" class="hidden" />
+                          <label for="image" class="py-2 px-3 border border-gray-300 rounded-md text-sm leading-4 font-medium text-gray-600 hover:text-gray-800 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-50 active:text-gray-800 transition duration-150 ease-in-out cursor-pointer">
                               Choose file
                           </label>
                       </div>
@@ -151,14 +149,14 @@
                   
                     <div class="mt-1 relative flex rounded-md items-start">
                       <div class="flex items-center h-5">
-                        <input required="" id="confirm" name="confirm" type="checkbox" class="focus:ring-purple-500 h-4 w-4 text-purple-600 rounded"></div>
+                        <input required="" id="permission" name="permission" type="checkbox" class="focus:ring-purple-500 h-4 w-4 text-purple-600 rounded"  required=""></div>
                         <div class="ml-2 text-sm leading-5 overflow-auto" style="max-height: 100px;">
-                          <label for="confirm" class=" text-gray-600">I give permission to use this testimonial across social channels and other marketing efforts</label>
+                          <label for="permission" class=" text-gray-600">I give permission to use this testimonial across social channels and other marketing efforts</label>
                         </div>
                       </div>
                   </div>
                     
-                  <button type="submit" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-purple-600 text-base font-medium text-white hover:bg-purple-700 focus:outline-none sm:ml-3 sm:w-auto sm:text-sm">Send</button>
+                  <button type="submit" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-purple-600 text-base font-medium text-white hover:bg-purple-700 focus:outline-none sm:ml-3 sm:w-auto sm:text-sm" value="Send">Send</button>
                   <button type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-200 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:w-auto sm:text-sm" onclick="TextToggle()" >Cancel</button>
                 
             </form>
@@ -166,6 +164,18 @@
     </div>
 </div> 
 <script>
+
+  alertify.set('notifier', 'position', 'top-right');
+  {% if messages %}
+    
+    {% for message in messages %}
+      alertify.{{message.tags}}('{{message}}');
+    {% endfor %}
+      
+  {% endif %}
+
+
+
   function TextToggle() {
     const modal = document.getElementById("crud-modal");
     modal.classList.toggle("hidden");
