worked on embed and view all testimonial section

--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -144,7 +144,7 @@
         <li class="col-span-1 flex flex-col bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 shadow-sm hover:shadow-md transition-shadow duration-200 ease-in-out">
           <div class="flex-1 p-6">
             <div class="flex items-center justify-between">
-              <a class="flex items-center space-x-3 group" href="{% url 'feedback:space_name' space.slug %}">
+              <a class="flex items-center space-x-3 group" href="{% url 'dashboard:get_product_review' space.slug %}">
               
                 <img 
                   loading="lazy" 
